--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email</h4>
-                <p>elmehdi.cn@gmail.com</p>
+                <p>elmehdi.nez@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -407,7 +407,7 @@
 
           <div id="contac" class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch" data-aos="fade-left">
            
-            <form class="email-form" action="https://getform.io/f/1818ff8e-af27-422f-90c1-92d57be11ef9" method="post" >
+            <form class="email-form" action="https://getform.io/f/b23e9557-784d-4cce-a258-7539c64fd764" method="post" >
               <div class="row" >
                 <div class="form-group col-md-6">
                   
